RESOLVED FIXED76587
REGRESSION (r88886): Tabs restore blank when running Safari with a nightly build for the first time
https://bugs.webkit.org/show_bug.cgi?id=76587
Summary REGRESSION (r88886): Tabs restore blank when running Safari with a nightly bu...
Anders Carlsson
Reported 2012-01-18 16:10:48 PST
REGRESSION (r88886): Tabs restore blank when running Safari with a nightly build for the first time
Attachments
Patch (5.18 KB, patch)
2012-01-18 16:13 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-01-18 16:13:35 PST
Anders Carlsson
Comment 2 2012-01-18 16:16:13 PST
*** Bug 65075 has been marked as a duplicate of this bug. ***
Anders Carlsson
Comment 3 2012-01-18 16:16:58 PST
Note You need to log in before you can comment on or make changes to this bug.