REGRESSION (r88886): Tabs restore blank when running Safari with a nightly build for the first time https://bugs.webkit.org/show_bug.cgi?id=76587 <rdar://problem/9739135>

Reviewed by Sam Weinig.

* UIProcess/cf/WebPageProxyCF.cpp:
Change CurrentSessionStateDataVersion back to 2.

* WebProcess/WebPage/DecoderAdapter.cpp:
(WebKit::DecoderAdapter::decodeString):
* WebProcess/WebPage/EncoderAdapter.cpp:
(WebKit::EncoderAdapter::encodeString):
Backport the CoreIPC string encoding and decoding functions that were in place prior to r88886.

Canonical link: https://commits.webkit.org/93410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105339 268f45cc-cd09-0410-ab3c-d52691b4dbfc